--- a/web/client/index.html
+++ b/web/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet" type="text/css">
+    <script src="main.js"></script>
     <title>COMMUNIST MANIFESTO</title>
 </head>
 <body>
@@ -11,6 +12,11 @@
     <p class="bilaAf">you may ask why? <br> idk I just think that, not happy, then you are fucking retarded and I hope you fucking die.
     One must imagine Sisyphus happy. Fucking be happy nigga. Not happy w your nine-to-five? <span class="podtrhnuto">Fuck you</span></p>
     <p class="cernaAf">Looking for a meaning in your stupid chungus life? THERE FUCKING IS NONE. Or atleast not one you'd be happy with. 
-    The only true meaning in life is fucking and reproduction. There is no meaning in your job. Be. Fucking. Happy. You should be happy with your determination of going to that job. Fuck you. Bye</p>
+    The only true meaning in life is fucking and reproduction. There is no meaning in your job. Be. Fucking. Happy. You should be happy 
+    with your determination of going to that job. Fuck you. Bye</p>
+    <div class="flexContainer">
+        <img class="svastika" src="ezop.jpg">
+        <button onclick="testik()">smrdis af</button>
+    </div>
 </body>
 </html>
