--- a/web/client/index.html
+++ b/web/client/index.html
@@ -8,7 +8,7 @@
     <title>COMMUNIST MANIFESTO</title>
 </head>
 <body>
-    <h1>charlie deserved it nigga</h1>
+    <h1>uwu</h1>
     <p class="bilaAf">you may ask why? <br> idk I just think that, not happy, then you are fucking retarded and I hope you fucking die.
     One must imagine Sisyphus happy. Fucking be happy nigga. Not happy w your nine-to-five? <span class="podtrhnuto">Fuck you</span></p>
     <p class="cernaAf">Looking for a meaning in your stupid chungus life? THERE FUCKING IS NONE. Or atleast not one you'd be happy with. 
@@ -16,7 +16,10 @@
     with your determination of going to that job. Fuck you. Bye</p>
     <div class="flexContainer">
         <img class="svastika" src="ezop.jpg">
-        <button onclick="testik()">smrdis af</button>
+        <button onclick="testik()">tohle je post </button>
+        <input type="text" id="meow" placeholder="type your message here...">
+        <button onclick="testik2()">tady get nebo idk lol</button>
     </div>
+    <span id="response">here will be respnse shown</span>
 </body>
 </html>
