--- a/web/client/index.html
+++ b/web/client/index.html
@@ -8,6 +8,7 @@
     <title>COMMUNIST MANIFESTO</title>
 </head>
 <body>
+    <!-- nah bro not commenting html file, just fucking guess if you dont know what it does -->
     <h1>uwu</h1>
     <p class="bilaAf">you may ask why? <br> idk I just think that, not happy, then you are fucking retarded and I hope you fucking die.
     One must imagine Sisyphus happy. Fucking be happy nigga. Not happy w your nine-to-five? <span class="podtrhnuto">Fuck you</span></p>
