--- a/web/client/index.html
+++ b/web/client/index.html
@@ -15,12 +15,19 @@
     <p class="cernaAf">Looking for a meaning in your stupid chungus life? THERE FUCKING IS NONE. Or atleast not one you'd be happy with. 
     The only true meaning in life is fucking and reproduction. There is no meaning in your job. Be. Fucking. Happy. You should be happy 
     with your determination of going to that job. Fuck you. Bye</p>
-    <div class="flexContainer">
+    <div class="flexContainer2">
         <img class="svastika" src="ezop.jpg">
-        <button onclick="testik()">tohle je post </button>
-        <input type="text" id="meow" placeholder="type your message here...">
-        <button onclick="testik2()">tady get nebo idk lol</button>
     </div>
-    <span id="response">here will be respnse shown</span>
+    <div class="flexContainerCol">
+        <div class="flexContainer">
+            <button onclick="testik()">tohle je post </button>
+            <input type="text" id="meow" placeholder="type your message here...">
+        </div>
+        <div class="flexContainer">
+            <button onclick="testik2()">tady get nebo idk lol</button>
+            <input type="text" id="idInput" placeholder="type the id of the message">
+        </div>
+        <span id="response">here will be respnse shown</span>
+    </div>
 </body>
 </html>
