dvarves started attacking ABOORT

--- a/web/client/index.html
+++ b/web/client/index.html
@@ -29,5 +29,6 @@
         </div>
         <span id="response">here will be respnse shown</span>
     </div>
+    <a href="board.html" class="boardLink">Click here if you wanna get tf out</a>
 </body>
 </html>
