--- a/web/client/html/board.html
+++ b/web/client/html/board.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <!-- nah bro not commenting html file, just fucking guess if you dont know what it does sputid -->
-     <p>This is where the dwarves live, dont wake them up, it Will make them kinda homeless</p>
-     <a class="boardLink" href="/">Get tf back from dwarves (ty for not waking them up)</a>
+    <p>This is where the dwarves live, dont wake them up, it Will make them kinda homeless</p>
+    <a class="boardLink" href="/">Get tf back from dwarves (ty for not waking them up)</a>
+    <button class="getAll" onclick="getMSGS()">GET ALL MSGS, BUT BEWARE THE DWAVES</button>
 </body>
 </html>
