--- a/web/client/html/board.html
+++ b/web/client/html/board.html
@@ -12,5 +12,8 @@
     <p>This is where the dwarves live, dont wake them up, it Will make them kinda homeless</p>
     <a class="boardLink" href="/">Get tf back from dwarves (ty for not waking them up)</a>
     <button class="getAll" onclick="getMSGS()">GET ALL MSGS, BUT BEWARE THE DWAVES</button>
+    <span id="messageShower" class="msgGrid">
+
+    </span>
 </body>
 </html>
