--- a/web/client/html/index.html
+++ b/web/client/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,19 @@
     <script src="main.js"></script>
     <title>COMMUNIST MANIFESTO</title>
 </head>
+
 <body>
     <!-- nah bro not commenting html file, just fucking guess if you dont know what it does -->
     <h1>uwu</h1>
-    <p class="bilaAf">you may ask why? <br> idk I just think that, not happy, then you are fucking retarded and I hope you fucking die.
-    One must imagine Sisyphus happy. Fucking be happy nigga. Not happy w your nine-to-five? <span class="podtrhnuto">Fuck you</span></p>
-    <p class="cernaAf">Looking for a meaning in your stupid chungus life? THERE FUCKING IS NONE. Or atleast not one you'd be happy with. 
-    The only true meaning in life is fucking and reproduction. There is no meaning in your job. Be. Fucking. Happy. You should be happy 
-    with your determination of going to that job. Fuck you. Bye</p>
+    <p class="bilaAf">you may ask why? <br> idk I just think that, not happy, then you are fucking retarded and I hope
+        you fucking die.
+        One must imagine Sisyphus happy. Fucking be happy nigga. Not happy w your nine-to-five? <span
+            class="podtrhnuto">Fuck you</span></p>
+    <p class="cernaAf">Looking for a meaning in your stupid chungus life? THERE FUCKING IS NONE. Or atleast not one
+        you'd be happy with.
+        The only true meaning in life is fucking and reproduction. There is no meaning in your job. Be. Fucking. Happy.
+        You should be happy
+        with your determination of going to that job. Fuck you. Bye</p>
     <div class="flexContainer2">
         <img class="svastika" src="ezop.jpg">
     </div>
@@ -30,5 +36,7 @@
         <span id="response">here will be respnse shown</span>
     </div>
     <a href="board.html" class="boardLink">Click here if you wanna get tf out</a>
+    <a href="chat.html" class="boardLink">Click here to chat with neadtrhals</a>
 </body>
+
 </html>
